fix(tabs): add dark mode variables (#752)

--- a/tegel/src/components/tabs/inline-tabs-fullbleed/inline-tabs-fullbleed.scss
+++ b/tegel/src/components/tabs/inline-tabs-fullbleed/inline-tabs-fullbleed.scss
@@ -10,7 +10,8 @@
   &::after {
     content: ' ';
     display: block;
-    border-bottom: 1px solid var(--sdds-inline-tabs-fullbleed-horizontal-divider-bg);
+    border-bottom: 1px solid var(--sdds-inline-tabs-fullbleed-horizontal-divider-background);
+    opacity: var(--sdds-inline-tabs-fullbleed-horizontal-divider-opacity);
     left: 0;
     right: 0;
     bottom: 0;
@@ -29,7 +30,8 @@
     }
   }
 
-  &--forward {
+  &--forward,
+  &--back {
     cursor: pointer;
     width: 48px;
     height: 100%;
@@ -37,7 +39,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    background-color: var(--sdds-inline-tabs-fullbleed-scroll-btn-bg);
+    background-color: var(--sdds-inline-tabs-fullbleed-scroll-btn-background);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,48 +52,18 @@
     }
 
     &:hover {
-      background-color: var(--sdds-inline-tabs-fullbleed-scroll-btn-hover-bg);
+      background-color: var(--sdds-inline-tabs-fullbleed-scroll-btn-background-hover);
     }
 
     &:active {
-      background-color: var(--sdds-inline-tabs-fullbleed-scroll-btn-active-bg);
+      background-color: var(--sdds-inline-tabs-fullbleed-scroll-btn-background-active);
     }
 
     &:focus {
       @include sdds-focus-state;
     }
-  }
-
-  &--back {
-    cursor: pointer;
-    width: 48px;
-    height: 100%;
-    border: 0;
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-color: var(--sdds-inline-tabs-fullbleed-scroll-btn-bg);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    pointer-events: none;
-
-    &__show {
-      opacity: 1;
-      pointer-events: all;
-    }
-
-    &:hover {
-      background-color: var(--sdds-inline-tabs-fullbleed-scroll-btn-hover-bg);
-    }
-
-    &:active {
-      background-color: var(--sdds-inline-tabs-fullbleed-scroll-btn-active-bg);
-    }
-
-    &:focus {
-      @include sdds-focus-state;
+    svg{
+      fill:var(--sdds-inline-tabs-scroll-btn-color);
     }
   }
 
@@ -104,7 +76,8 @@
     //fixme: headline-07 has a line-height that is not matching old storybook
     font: var(--sdds-headline-07);
     letter-spacing: var(--sdds-headline-07-ls);
-    color: rgb(0 21 51 / 60%);
+    color: var(--sdds-inline-tabs-fullbleed-tab-color);
+    opacity: 0.6;
     padding: 16px 0;
     margin-right: 32px;
     text-decoration: none;
@@ -124,9 +97,19 @@
       width: 0;
       margin-right: auto;
       height: 2px;
-      background-color: var(--sdds-inline-tabs-fullbleed-tab-hover-indicator-bg);
+      background-color: var(--sdds-inline-tabs-fullbleed-tab-indicator-background-hover);
       transition: width 0.15s ease-in-out;
       z-index: 1;
+    }
+  }
+  
+  ::slotted(&--tab__active) {
+    color: var(--sdds-inline-tabs-fullbleed-tab-color-active);
+    opacity:1;
+
+    &::after {
+      width: 100%;
+      background-color: var(--sdds-inline-tabs-fullbleed-tab-indicator-background-active);
     }
   }
 
@@ -140,7 +123,8 @@
 
   /* tab states */
   ::slotted(&--tab:hover) {
-    color: var(--sdds-inline-tabs-fullbleed-tab-hover-color);
+    color: var(--sdds-inline-tabs-fullbleed-tab-color-hover);
+    opacity:1;
 
     &::after {
       width: 100%;
@@ -150,19 +134,11 @@
   ::slotted(&--tab:focus) {
     @include sdds-focus-state;
 
-    color: var(--sdds-inline-tabs-fullbleed-tab-focus-color);
-
+    color: var(--sdds-inline-tabs-fullbleed-tab-color-focus);
+    opacity:1;
+    
     &::after {
       width: 0;
-    }
-  }
-
-  ::slotted(&--tab__active) {
-    color: var(--sdds-inline-tabs-fullbleed-tab-active-color);
-
-    &::after {
-      width: 100%;
-      background-color: var(--sdds-inline-tabs-fullbleed-tab-active-indicator-bg);
     }
   }
 
@@ -171,32 +147,32 @@
   }
 
   ::slotted(&--tab__disabled) {
-    color: var(--sdds-inline-tabs-fullbleed-tab-active-color);
+    color: var(--sdds-inline-tabs-fullbleed-tab-color-disabled);
     pointer-events: none;
-    opacity: 0.16;
+    opacity: var(--sdds-inline-tabs-fullbleed-tab-color-opacity-disabled);
   }
 }
 
 .sdds-inline-tabs-fullbleed-primary {
-  background-color: var(--sdds-white);
+  background-color: var(--sdds-inline-tabs-fullbleed-tab-background-primary);
 
   .sdds-inline-tabs-fullbleed--forward {
-    background-color: var(--sdds-white);
+    background-color: var(--sdds-inline-tabs-fullbleed-tab-background-primary);
   }
 
   .sdds-inline-tabs-fullbleed--back {
-    background-color: var(--sdds-white);
+    background-color: var(--sdds-inline-tabs-fullbleed-tab-background-primary);
   }
 }
 
 .sdds-inline-tabs-fullbleed-secondary {
-  background-color: var(--sdds-grey-50);
+  background-color: var(--sdds-inline-tabs-fullbleed-tab-background-secondary);
 
   .sdds-inline-tabs-fullbleed--forward {
-    background-color: var(--sdds-grey-50);
+    background-color: var(--sdds-inline-tabs-fullbleed-tab-background-secondary);
   }
 
   .sdds-inline-tabs-fullbleed--back {
-    background-color: var(--sdds-grey-50);
+    background-color: var(--sdds-inline-tabs-fullbleed-tab-background-secondary);
   }
 }
